# heimdall

./: .gitattributes  .gitignore  Cargo.toml  makefile  readme.md
services/config/: Cargo.toml  Dockerfile  build.rs  readme.md
services/config/src/: container.rs  lib.rs  main.rs
services/config/src/api/: error.rs  mod.rs  validator.rs
services/config/src/api/controllers/: config_handler.rs  environment_handler.rs  mod.rs
services/config/src/api/dto/: config.rs  environment.rs
services/config/src/api/grpc/: config.rs
services/config/src/api/proto/: .dockerignore
services/config/src/domain/: error.rs  mod.rs
services/config/src/domain/models/: config.rs  environment.rs  mod.rs
services/config/src/domain/repositories/: config.rs  environment.rs  mod.rs  repository.rs
services/config/src/domain/services/: config.rs  environment.rs
services/config/src/domain/storages/: config.rs  environment.rs  mod.rs
services/config/src/infrastructure/: error.rs  mod.rs  queries.rs
services/config/src/infrastructure/connectors/: mod.rs  scylla.rs
services/config/src/infrastructure/databases/: mod.rs  s3.rs  scylla.rs  scylladb.rs
services/config/src/infrastructure/models/: config.rs  config_s3.rs  count.rs  environment.rs  mod.rs
services/config/src/infrastructure/repositories/: config.rs  config_s3.rs  environment.rs  environment_s3.rs  mod.rs  repository.rs
services/config/src/infrastructure/storages/: config.rs  r2.rs  (+1 more)
services/config/src/services/: config.rs  environment.rs
services/gateway/: Cargo.toml  Dockerfile
services/gateway/src/: main.rs
(+2 files in other folders)
